tests/src/frontend/typechecking/invalid/late_static7.sk
base class Foo {
  static fun abs(): void;
  deferred static fun foo(): void {
    static::abs()
  }
}

base class Bar extends Foo

fun main(): void {
  print_raw(Bar::foo())
}
